chore: criando rota para recuperar conta e criando autenticacao para todas as rotas post e delete